--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,90 @@
 * {
-  box-sizing: border-box; 
+  box-sizing: border-box;  
 }
 
-.parent {
+body {
   /* center wrapper*/
   margin: 0 auto;
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   background-image: url("../images/hip-square.png");
-  
 }
-.body {
-  clear:both;
+
+img {
+  object-fit: contain;
+}
+
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.menu-1 {
+  background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  flex:1;
+  text-align: center;
   color:#ffffff;
-  width: 960px;
+  font-size: 10pt;
+  min-width:40%;
+  margin-bottom: 20px;
 }
 
-.clear{
-  clear:both;
-}
-
-.header{
-  clear:both;
-  float:left;
-  background-color: white;
-  width: 100%;
-  margin-bottom: 30px;
-}
-
-.h1 {
-  font-family: Georgia, Times, 'Times New Roman', serif;
+.menu-2 {
+  flex: 1;
+  background-color: #ffffff;
+  min-width: 60%;
+  margin-bottom: 20px;
 }
 
 .page {
   font-size: 11pt;
   text-decoration: none;
   color: grey;
+}
+
+.title {
+  color: #4aaaa5;
+  text-align: left;
+  font-size: 15pt;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid gray;
+}
+
+.profile{
+  /*float:left;
+  margin: 10px;*/
+  display:flex;
+  width:40%;
+  height:30%;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  margin: 10px auto;
+}
+
+.social{
+  float:left;
+  margin-right: 5px;
+  margin-bottom: 20px;
+  width:60px;
+  height:60px;
+}
+.stack{
+  float:left;
+  margin-right: 5px;
+  margin-bottom: 20px;
+  padding-top: 2px;
+  width:56px;
+  height:56px;
+}
+
+p {
+  flex:1;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  color: #8b7b8b;  
+  min-width: 10%;
+  margin:10px;
 }
 
 ul {
@@ -54,84 +104,43 @@ li a {
     padding: 14px 16px;
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
 
-.float {
-  float: left;
-  overflow: hidden;
-  margin-left: 30px;
-  padding-top: 5px;
-  background-color: #4aaaa5;
-  font-family: 'Georgia', Times, Times New Roman, serif;
-  text-align: center;
-  color:#ffffff;
-  width:300px;
-  font-size: 10pt;
-  height:80px;
-}
-.float-1 {
-  float: left;
-  margin-left: 200px;
-}
-.float-2 {
-  float: left;
+.col-1 {
+  flex:1;
   text-align: left;
-  width: 500px;
+  min-width: 50%;
   background-color: #ffffff;
   padding: 10px;
-  margin-left: 30px;
-  
+  margin-left: 30px; 
 }
-.float-3 {
-  float: left;
+
+.col-2 {
+  flex:1;
   text-align: left;
-  width: 270px;
+  min-width: 20%;
   background-color: #ffffff;
   padding: 10px;
   margin-left: 25px;
-  
-}
-.title {
-  color: #4aaaa5;
-  text-align: left;
-  font-size: 15pt;
-  padding-left: 10px;
-  padding-bottom: 10px;
-  border-bottom: 0.5px solid black;
+  margin-right: 20px;
+  height: 200px;
 }
 
-.head {
-  background-color: #ffffff;
-}
-
-.profile{
-  float:left;
-  margin: 10px;
-  width:120px;
+.portfolio{
+  display:flex;
+  width:220px;
   height:140px;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  margin: 10px auto;
 }
-.text{
-  border:10px;
-  margin: 10px;
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-  color: #8b7b8b;
-}
-.social{
-  float:left;
-  margin-right: 5px;
-  margin-bottom: 20px;
-  width:60px;
-  height:60px;
-}
-.stack{
-  float:left;
-  margin-right: 5px;
-  margin-bottom: 20px;
-  padding-top: 2px;
-  width:56px;
-  height:56px;
-}
+
+
 .footer{
-  float:left;
   width: 100%;
   background-color: grey;
   color:white;
@@ -139,7 +148,15 @@ li a {
   font-size: 8pt;
   padding:30px;
   border-top: 6px solid #4aaaa5;
-  margin-top: 60px;
+  margin-top: 300px;
+  bottom:0px;
+  position:fixed;
+}
+.text{
+  border:10px;
+  margin: 10px;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  color: #8b7b8b;
 }
 .box{
   margin-left: 10px;
@@ -147,7 +164,7 @@ li a {
   color:#D3D3D3;
   padding: 5px;
   margin-bottom: 10px;
-  width: 470px;
+  width: 90%;
 }
 .textbox{
   margin-left: 10px;
@@ -155,7 +172,7 @@ li a {
   color:#D3D3D3;
   padding: 5px;
   margin-bottom: 10px;
-  width: 470px;
+  width: 90%;
   height: 200px;
 }
 .submit{
@@ -169,9 +186,109 @@ li a {
   width: 100px;
   height: 40px;
 }
-.portfolio{
-  float:left;
-  margin: 10px;
-  width:220px;
-  height:140px;
+
+
+@media (max-width: 640px) {
+ /* body {
+    background-color: red;
+  }*/
+
+
+
+  .menu-1 {
+    min-width: 100%; 
+    margin-bottom: 0px;
+  }
+  .menu-2 {
+    min-width: 100%; 
+  }
+  li {
+    width: 33%;
+  }
+  .col-1 {
+    min-width: 90%; 
+    margin: 20px;
+    height: 100%;
+  }
+  .col-2 {
+    min-width: 90%; 
+    margin:20px;
+  }
+  .profile {
+    width:80%;
+    height: 60%;
+  }
+  p {
+    min-width: 90%;   
+  }
+
+  .footer {
+    margin-top: 20px;
+  }
+  .portfolio{
+    width:80%;
+    height: 18.5%;
+    
+}
+
+}
+
+@media (min-width: 641px) and (max-width: 979px) {
+  /*body {
+    background-color: yellow;
+  }*/
+  .col-1 {
+    float:left;
+    min-width: 20%; 
+    margin: 20px;
+    height: 100%;
+  }
+  .col-2 {
+    min-width: 90%; 
+
+  }
+  .profile {
+    width:30%;
+    height: 60%;
+    float: left;
+    margin-right:20px;
+    margin-top: 0px;
+    margin bottom: 20px;
+  }
+  p {
+    min-width: 20%;
+    background-color: white;
+    overflow-y: auto;
+  }
+    .portfolio{
+    float:left;
+    width:40%;
+    margin: 10px;
+    
+}
+ 
+}
+
+@media (min-width: 980px)  {
+ .row {
+    height: 0px auto;
+  }
+  .col-1 {
+    float:left;
+    height: 100%;
+  }
+  .profile {
+    width:30%;
+    height: 60%;
+    float: left;
+    margin-right:20px;
+    margin-top: 0px;
+    margin bottom: 20px;
+  }
+  .portfolio{
+    width:95%;
+    height:40%;
+    margin: 10px;
+    
+}
 }
